@@ -2229,10 +2229,12 @@ but an admin is not present.
 PROP_UNSELLABLE=\
 Property   : Prop_Unsellable\n\r\
 Targets    : Items, Mobs\n\r\
-Parameters : \n\r\
-Example    : \n\r\
+Parameters : (MESSAGE="[message]") (AMBIANCE="[ambiance]") (DROPOFF=[T/F])\n\r\
+Example    : message="You can't sell that."\n\r\
 Description: \n\r\
-Makes the mob or item unable to be sold to a shopkeeper.
+Makes the mob or item unable to be sold to a shopkeeper.  The message shown and whether \
+the item has an ambiance can also be set, and whether this property is automatically \
+removed when the item is dropped.
 
 PROP_USEADJUSTER=\
 Property   : Prop_UseAdjuster\n\r\
